--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.4 | ^8.0"
+        "php": "^7.4 | ^8.0",
+        "illuminate/database": "8.x-dev",
+        "illuminate/events": "8.x-dev"
 
     },
     "autoload": {
